--- a/app/src/main/res/navigation/locations_nav_graph.xml
+++ b/app/src/main/res/navigation/locations_nav_graph.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/locations"
+    android:id="@+id/menu__locations"
     app:startDestination="@id/locationsFragment">
 
     <fragment
