--- a/app/src/main/res/navigation/characters_nav_graph.xml
+++ b/app/src/main/res/navigation/characters_nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/allCharactersFragment"
-        android:name="com.example.rickandmorty.ui.AllCharactersFragment"
+        android:name="com.example.rickandmorty.ui.characters.CharactersFragment"
         android:label="fragment_all_characters"
-        tools:layout="@layout/fragment_all_characters" />
+        tools:layout="@layout/fragment_characters" />
 </navigation>
