--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.Rickandmorty" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
+        <!--Material type attributes-->
+        <item name="textAppearanceOverline">@style/TextAppearance.RikAndMorty.Overline</item>
+
+        <!--Default styles-->
+        <item name="bottomNavigationStyle">@style/Widget.RickAndMorty.BottomNavigationView</item>
+
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
